Config, common, fixed and non-fixed (I275).